bug introduit par r59001 : pas de overflow:hidden qui masque les icones deroulantes mais un height pour IE<=7
git-svn-id: svn://zone.spip.org/spip-zone/_core_/plugins/porte_plume@59086 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/css/barre_outils.css
+++ b/css/barre_outils.css
@@ -116,11 +116,12 @@
     visibility: hidden;
     overflow: hidden;
 }
+.lte7 .markItUp .markItUpHeader ul {height:29px;}
 .markItUp .markItUpHeader ul {
 	display: block;
 	margin: 0 !important;
 	padding: 0;
-    overflow: hidden;
+
 }
 .markItUp .markItUpHeader ul li {
 	list-style:none;
